Table user {
  user_id bigint [pk, increment]
  first_name varchar(100) [not null]
  surnames varchar(200) [not null]
  username varchar(50) [not null, unique]
  description_user text
  password varchar(255) [not null]
  email varchar(100) [not null, unique]
  profile_img varchar(200)
  is_active boolean [not null, default: false]
  temporalTokenActivaction varchar(255)
}

Table user_activity {
  activity_id bigint [pk, increment]
  user_id bigint [not null]
  action_type enum('create', 'update', 'delete', 'login') [not null]
  action_details text [not null]
  create_at timestamp [default: `current_timestamp`]
}

Table user_enterprise {
  user_id bigint [pk]
  enterprise_name varchar(100)
  enterprise_phone varchar(15)
}

Table follow {
  follower_id bigint [pk]
  followed_id bigint [pk]
}

Table post {
  post_id bigint [pk, increment]
  user_id bigint [not null]
  title varchar(50)
  img_post varchar(200)
  description_post varchar(500)
  created_at timestamp [default: `current_timestamp`]
}

Table like {
  user_id bigint [pk]
  post_id bigint [pk]
}

Table comment {
  comment_id bigint [pk, increment]
  user_id bigint [not null]
  message text [not null]
  post_id bigint [not null]
  created_at timestamp [default: `current_timestamp`]
}

Table shared {
  id bigint [pk, increment]
  user_id bigint [not null]
  post_id bigint [not null]
}

Table chat {
  chat_id bigint [pk, increment]
  user_1 bigint [not null]
  user_2 bigint [not null]
}

Table message {
  message_id bigint [pk, increment]
  chat_id bigint [not null]
  content text [not null]
  sennt_at timestamp [default: `current_timestamp`]
  is_read boolean
  user_send_id bigint [not null]
}

Ref: user_activity.user_id > user.user_id [delete: cascade]

Ref: user_enterprise.user_id > user.user_id [delete: cascade]

Ref: follow.follower_id > user.user_id [delete: cascade]
Ref: follow.followed_id > user.user_id [delete: cascade]

Ref: post.user_id > user.user_id [delete: cascade]

Ref: like.user_id > user.user_id [delete: cascade]
Ref: like.post_id > post.post_id [delete: cascade]

Ref: comment.user_id > user.user_id [delete: cascade]
Ref: comment.post_id > post.post_id [delete: cascade]

Ref: shared.user_id > user.user_id [delete: cascade]
Ref: shared.post_id > post.post_id [delete: cascade]

Ref: chat.user_1 > user.user_id [delete: cascade]
Ref: chat.user_2 > user.user_id [delete: cascade]

Ref: message.chat_id > chat.chat_id
Ref: message.user_send_id > user.user_id